# mystu-PyTorch

./: .gitignore  01.认识张量.py  BackgroundKnowledgeNote.md  Homework.md  README.md  pyproject.toml
ManualCode/1.Study.KNN/: KNN.py  Utils.py
ManualCode/11.Study.PCA/: PCA.py
ManualCode/2.Study.DesicionTree/: DecisionTree.py  Utils.py
ManualCode/21.Study.Optimizer/: Optimizer.py
ManualCode/22.Study.Transformer/: Transformer.py
ManualCode/23.Study.BatchLayerNormalization/: Normalization.py
ManualCode/3.Study.NaiveBayes/: NaiveBayes.py  Utils.py
ManualCode/4.Study.LogisticRegression/: LogisticRegression.py  Utils.py
pMHC-TCR/data/: DataTreat.py  Raw.Posi.Clean.csv
pMHC-TCR/data/HealthyTcrRepoRaw/: ERR3987511.csv  ERR3987512.csv  ERR3987513.csv  ERR3987514.csv  ERR3987515.csv  ERR3987516.csv  ERR3987517.csv  ERR3987518.csv  ERR3987519.csv  ERR3987520.csv  ERR3987521.csv  ERR3987522.csv  ERR3987523.csv  ERR3987524.csv  ERR3987525.csv  ERR3987526.csv  ERR3987527.csv  ERR3987528.csv  ERR3987529.csv  ERR3987530.csv  ERR3987531.csv  ERR3987532.csv  ERR3987533.csv  ERR3987534.csv  ERR3987535.csv  ERR3987536.csv  ERR3987537.csv  ERR3987538.csv  ERR3987539.csv  ERR3987540.csv  ERR3987541.csv  ERR3987542.csv  ERR3987543.csv  ERR3987544.csv  ERR3987545.csv  ERR3987546.csv  SRR2905657.csv  SRR2905658.csv  SRR2905659.csv  SRR2905660.csv  (+36 more)
pMHC-TCR/evaluate/: Evaluate.py
pMHC-TCR/feature/: Embedding.py
pMHC-TCR/model/: Training.py
pMHC-TCR/transformer/: Modules.py
